<resources>
    <string name="app_name">CarMATE</string>
    <string name="year_title">Year: %1$s</string>
    <string name="color_title">Colour: %1$s</string>
    <string name="type_title">Type: %1$s</string>
    <string name="price_title">Price: %1$s</string>
    <string name="sort">Sort</string>
    <string name="sold">Sold</string>
    <string name="select">Select</string>
    <string name="select_sort">Select sort</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="add">Add</string>
    <string name="title_activity_add" translatable="false">title_activity_add</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="color">Colour</string>
    <string name="type">Type</string>
    <string name="price">Price ($)</string>
    <string name="done">Done</string>
    <string name="add_button">add button</string>
    <string name="search">Search</string>
    <string name="random">Random</string>
    <string name="generate_random_number">Generate Random Numbers</string>
    <string name="max_min_warning">Make sure that the range (max - min) is bigger than or equal to the amount.</string>
    <string name="min_max_error">Make sure that the max value is higher than the minimum.</string>
    <string name="random_blank">Make sure all numbers have been entered.</string>
    <string name="plate_title">Plate: %1$s</string>
    <string name="plate">Plate</string>
    <string name="search_linear">Search (Linear)</string>
    <string name="search_binary">Search (Binary)</string>
    <string name="no_results">No results</string>
    <string name="search_for">Search for</string>
    <string name="permissions_none">Please go to your device settings and grant CarMATE storage permissions.</string>
    <string name="mark_as_sold">Mark as sold</string>
    <string name="delete">Delete</string>
    <string name="unmark_as_sold">Unmark as sold</string>
</resources>